Statická analýza kódu + opravy